<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">MOvieDB</string>
    <string name="title_activity_sample">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tmdb">TMDB</string>
    <string name="welcome">Welcome.</string>
    <string name="millions_of_movies_tv_shows_and_people_to_discover_explore_now">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="what_s_popular">What\'s Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="more_movies_and_tv_shows">More Movies and TV Shows</string>
    <string name="trending">Trending</string>
    <string name="github">github.com/jamesdeperio/moviedb</string>
</resources>